made a json local storage

--- a/server/package.json
+++ b/server/package.json
@@ -7,11 +7,14 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "date-and-time": "^0.8.1",
     "debug": "~2.6.9",
+    "edit-json-file": "^1.2.1",
     "express": "~4.16.1",
     "firebase-admin": "^8.2.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "js-base64": "^2.5.1",
     "morgan": "~1.9.1",
     "twilio": "^3.33.1"
   }
